--- a/ss5_form_html_table/bai_tap/survey_khach_hang.html
+++ b/ss5_form_html_table/bai_tap/survey_khach_hang.html
@@ -54,24 +54,25 @@
             </tr>
             <tr>
                 <td>Sản phẩm của chúng tôi được định giá khá ổn.</td><br>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Disagree">Rất không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Disagree">Không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Agree">Đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Agree">Rất đồng ý<br></td>
+                <td><input type="radio"name="check" value="Strongly Disagree">Rất không đồng ý<br></td>
+                <td><input type="radio"name="check1" value="Disagree">Không đồng ý<br></td>
+                <td><input type="radio"name="check1" value="Agree">Đồng ý<br></td>
+                <td><input type="radio"name="check1" value="Strongly Agree">Rất đồng ý<br></td>
+
             </tr>
             <tr>
                 <td>Sản phẩm của chúng tôi có chất lượng cao.</td><br>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Disagree">Rất không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Disagree">Không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Agree">Đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Agree">Rất đồng ý<br></td>
+                <td><input type="radio"name="check2" value="Strongly Disagree">Rất không đồng ý<br></td>
+                <td><input type="radio"name="check2" value="Disagree">Không đồng ý<br></td>
+                <td><input type="radio"name="check2" value="Agree">Đồng ý<br></td>
+                <td><input type="radio"name="check2" value="Strongly Agree">Rất đồng ý<br></td>
             </tr>
             <tr>
                 <td>Bạn muốn giới thiệu sản phẩm của chúng tôi cho bạn bè hoặc đồng nghiệp.</td><br>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Disagree">Rất không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Disagree">Không đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Agree">Đồng ý<br></td>
-                <td><input type="radio"name="check" aria-checked="false" value="Strongly Agree">Rất đồng ý<br></td>
+                <td><input type="radio"name="check3" value="Strongly Disagree">Rất không đồng ý<br></td>
+                <td><input type="radio"name="check3" value="Disagree">Không đồng ý<br></td>
+                <td><input type="radio"name="check3" value="Agree">Đồng ý<br></td>
+                <td><input type="radio"name="check3" value="Strongly Agree">Rất đồng ý<br></td>
             </tr>
         </table>
             <button type="submit">Gửi</button>
