--- a/ss5_form_html_table/bai_tap/survey_khach_hang.html
+++ b/ss5_form_html_table/bai_tap/survey_khach_hang.html
@@ -42,7 +42,7 @@
          <input type="text" name="money" style="height: 20px; width: 150px">$
          <input type="text" name="money" style="height: 20px; width: 20px">cent
         <h5 style="color: gray">Bạn muốn xem những tính năng nào trong sản phẩm mới.</h5>
-         <input type="text" name="text" style="height: 100px; width: 800px">
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px; width: 800px"></textarea>
         <h5 style="color: gray">Vui lòng đánh giá mức độ hài lòng của bạn với các nhận định sau.</h5>
         <table border="1">
             <tr>
