--- a/ss5_form_html_table/bai_tap/survey_khach_hang.html
+++ b/ss5_form_html_table/bai_tap/survey_khach_hang.html
@@ -54,7 +54,7 @@
             </tr>
             <tr>
                 <td>Sản phẩm của chúng tôi được định giá khá ổn.</td><br>
-                <td><input type="radio"name="check" value="Strongly Disagree">Rất không đồng ý<br></td>
+                <td><input type="radio"name="check1" value="Strongly Disagree">Rất không đồng ý<br></td>
                 <td><input type="radio"name="check1" value="Disagree">Không đồng ý<br></td>
                 <td><input type="radio"name="check1" value="Agree">Đồng ý<br></td>
                 <td><input type="radio"name="check1" value="Strongly Agree">Rất đồng ý<br></td>
