--- a/ss8_cau_truc_dieu_kien/thuc_hanh/thuc_hanh_2/thuc_hanh_2_bai_9.html
+++ b/ss8_cau_truc_dieu_kien/thuc_hanh/thuc_hanh_2/thuc_hanh_2_bai_9.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    var a = prompt("Nhập vào a: ");
-    var b = prompt("Nhập vào b: ");
-    var c = prompt("Nhập vào c: ");
-    if (a > 0 && b > 0 && c > 0 && a + b > c && a + c > b && b + c > a) {
+    var a = +prompt("Nhập vào a: ");
+    var b = +prompt("Nhập vào b: ");
+    var c = +prompt("Nhập vào c: ");
+    if (a,b,c > 0 && a + b > c && a + c > b && b + c > a) {
         alert("a,b,c là cạnh của 1 tam giác");
     } else {
         alert("a,b,c không phải là cạnh của 1 tam giác");
