--- a/ss9/thuc_hanh/thuc_hanh_1_bai_4.html
+++ b/ss9/thuc_hanh/thuc_hanh_1_bai_4.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <script>
-    let f0 = 0, f1 = 1;
+    let F0 = 0, F1 = 1, NextF;
     for (let i = 1; i < 30; i++) {
-        fb = f0 + f1;
-        f0 = f1;
-        f1 = fb;
-        if (fb % 5 == 0) {
-            document.write("Sô chia hết cho 5 trong dãy là: " + fb);
+        NextF = F0 + F1;
+        F0 = F1;
+        F1 = NextF;
+        if (NextF % 5 == 0) {
+            document.write("Sô chia hết cho 5 trong dãy là: " + NextF);
             break;
         }
     }
